apricot/app/entry-gemfire/config/ingressroute.yaml
#@ load("@ytt:data", "data")
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: entry-gemfire-locator
  namespace: blog
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`entry-gemfire-locator.lan.ik.am`)
    middleware:
    - name: entry-gemfire-locator-auth
    services:
    - name: entry-gemfire-locator
      port: 7070
      scheme: https
      serversTransport: entry-gemfire-locator-transport
  tls:
    secretName: entry-gemfire-locator-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: entry-gemfire-locator-auth
  namespace: blog
spec:
  basicAuth:
    secret: entry-gemfire-locator-auth
